# HFT_Sim

./: CMakeLists.txt  vcpkg.json
include/: angel_api.hpp  indicators.hpp  strategy.hpp
src/: angel_api.cpp  indicators.cpp  main.cpp  strategy.cpp
